--- a/src/Asin.AmazonWebScraperTests/Asin.AmazonWebScraperTests.csproj
+++ b/src/Asin.AmazonWebScraperTests/Asin.AmazonWebScraperTests.csproj
@@ -7,10 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="B082XY23D5-page2.html" />
+    <None Remove="B082XY23D5.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="B082XY23D5-page2.html" />
+    <EmbeddedResource Include="B082XY23D5.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Asin.AmazonWebScraper\Asin.AmazonWebScraper.csproj" />
   </ItemGroup>
 
 </Project>
