--- a/src/Asin.Web/ClientApp/angular.json
+++ b/src/Asin.Web/ClientApp/angular.json
@@ -45,7 +45,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/AsinApp",
+            "outputPath": "../wwwRoot",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
